added gallery page with modal.css and javascript, adjusted main.scss

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>DLEE-Desc</title>
+    <title>DLEE</title>
 
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/grid.css">
@@ -25,6 +25,7 @@
       <div class="nav">
         <a href="index.html">HOME</a>
         <a href="process.html">PROJECTS</a>
+        <a href="gallery.html">GALLERY</a>
         <a href="about.html" class="active">ABOUT</a>
       </div>
 
@@ -37,7 +38,7 @@
       <div class="box">
         <h2>ABOUT ME</h2>
         <p>
-          HOLY COW BATMAN! My name is Danny and I'm an illustrator! I like to combine graphic design
+          <em>HOLY COW BATMAN!</em> My name is Danny and I'm an illustrator! I like to combine graphic design
           with illustrations to create a narrative within a graphic. I like to explore
           different emotions through my artwork as well. I love experimenting with colour and
           finding different colour combinations in design. My hobbies include overanalyzing
