--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <div class="nav">
         <a href="" class="active">HOME</a>
         <a href="process.html">PROJECTS</a>
+        <a href="gallery.html">GALLERY</a>
         <a href="about.html">ABOUT</a>
       </div>
 
@@ -65,11 +66,6 @@
         <a href="https://www.instagram.com/boxonarock/">instagram</a>
         <a href="dla153@sfu.ca">email</a>
 
-      </div>
-
-      <div class="box">
-        <a href="styling.html">style guide</a>
-        <a href="references.html">references</a>
       </div>
 
 
