--- a/process.html
+++ b/process.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>DLEE-Projects</title>
+    <title>DLEE</title>
 
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/grid.css">
@@ -24,6 +24,7 @@
       <div class="nav">
         <a href="index.html">HOME</a>
         <a href="process.html" class="active">PROJECTS</a>
+        <a href="gallery.html">GALLERY</a>
         <a href="about.html">ABOUT</a>
       </div>
 
@@ -55,19 +56,35 @@
 
 
         </div>
+
+        <div class="project-container">
+          <a href="iatsu20192020.html">
+            <img src="img/iatsu/JUNEprofile.png">
+            <p>All Social Media Material</p>
+          </a>
+        </div>
       </div>
 
       <div class="box">
         <h2>SCHOOL PROJECTS</h2>
+        <h4>
+          projects created for course projects
+        </h4>
 
         <div class="project-container">
           <a href="">
-            <img src="img/illustration/storyboard/titlecard.PNG">
+            <img src="img/illustration/storyboard/fruuuit party.PNG">
 
             <p>IAT343 Animation Project</p>
 
           </a>
 
+          <a href="">
+
+            <img src="img/design/fixed frame landing page.jpg">
+
+            <p>IAT333 Web Experience Reform</p>
+          </a>
         </div>
       </div>
 
