--- a/styling.html
+++ b/styling.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>DLEE-StyleGuide</title>
+    <title>DLEE</title>
 
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/grid.css">
@@ -27,6 +27,7 @@
       <div class="nav">
         <a href="index.html">HOME</a>
         <a href="process.html">PROJECTS</a>
+        <a href="gallery.html">GALLERY</a>
         <a href="about.html" class="active">ABOUT</a>
       </div>
 
@@ -41,10 +42,13 @@
             <circle cx="10" cy="10" r="10" stroke="black" fill="white"/>
           </svg>
           <svg width="50" height="50">
-            <circle cx="10" cy="10" r="10" fill="rgb(255, 165, 48)"/>
+            <circle cx="10" cy="10" r="10" fill="rgb(255, 203, 59)"/>
           </svg>
           <svg width="50" height="50">
-            <circle cx="10" cy="10" r="10" fill="rgb(232, 89, 7)"/>
+            <circle cx="10" cy="10" r="10" fill="rgb(255, 135, 15)"/>
+          </svg>
+          <svg width="50" height="50">
+            <circle cx="10" cy="10" r="10" fill="rgb(255, 64, 0)"/>
           </svg>
 
           <h3>fonts</h3>
