--- a/iatsusummersocial.html
+++ b/iatsusummersocial.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>DLEE-IATSU 2019 Summer Social Banner</title>
+    <title>DLEE</title>
 
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/grid.css">
@@ -24,6 +24,7 @@
       <div class="nav">
         <a href="index.html">HOME</a>
         <a href="process.html" class="active">PROJECTS</a>
+        <a href="gallery.html">GALLERY</a>
         <a href="about.html">ABOUT</a>
       </div>
 
