--- a/references.html
+++ b/references.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>DLEE-StyleGuide</title>
+    <title>DLEE</title>
 
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/grid.css">
@@ -27,6 +27,7 @@
       <div class="nav">
         <a href="index.html">HOME</a>
         <a href="process.html">PROJECTS</a>
+        <a href="gallery.html">GALLERY</a>
         <a href="about.html" class="active">ABOUT</a>
       </div>
 
