link, text, img adjustments

--- a/about.html
+++ b/about.html
@@ -41,7 +41,8 @@
           <em>HOLY COW BATMAN!</em> My name is Danny and I'm an illustrator! I like to combine graphic design
           with illustrations to create a narrative within a graphic. I like to explore
           different emotions through my artwork as well. I love experimenting with colour and
-          finding different colour combinations in design. My hobbies include overanalyzing
+          finding different colour combinations in design. I'm also an occasional
+          photographer for my friends. My hobbies include overanalyzing
           fictional characters and creating new original concepts.
         </p>
 
