--- a/gallery.html
+++ b/gallery.html
@@ -42,6 +42,7 @@
         <img class="myImages" id="myImg" src="img/illustration/zaddy rockstar.png">
         <img class="myImages" id="myImg" src="img/illustration/mimlfy.png">
         <img class="myImages" id="myImg" src="img/illustration/lemon head.png">
+        <img class="myImages" id="myImg" src="img/illustration/super edgy boy.png">
         <img class="myImages" id="myImg" src="img/illustration/dickie boy.png">
         <img class="myImages" id="myImg" src="img/illustration/halry.png">
         <img class="myImages" id="myImg" src="img/illustration/acrobatic bith.png">
