--- a/process.html
+++ b/process.html
@@ -48,7 +48,7 @@
 
           </a>
 
-          <a href="">
+          <a href="iatsuspringformal2020.html">
             <img src="img/iatsu/formalEventV2.jpg">
             <p>IATSU Spring 2020 Formal</p>
 
@@ -73,9 +73,9 @@
 
         <div class="project-container">
           <a href="">
-            <img src="img/illustration/storyboard/fruuuit party.PNG">
+            <img src="img/design/PUB332/XCU-cover.PNG">
 
-            <p>IAT343 Animation Project</p>
+            <p>PUB332 Publication Project</p>
 
           </a>
 
@@ -86,17 +86,6 @@
             <p>IAT333 Web Experience Reform</p>
           </a>
         </div>
-      </div>
-
-      <div class="box">
-        <h2>PERSONAL PROJECTS</h2>
-
-
-        <div class="project-container">
-
-
-        </div>
-
       </div>
 
     </div>
