fixed grid and broken img

--- a/iatsu20192020.html
+++ b/iatsu20192020.html
@@ -82,7 +82,7 @@
       <div class="gallery">
         <img class="myImages" id="myImg" src="img/iatsu/ECelections.jpg">
         <img class="myImages" id="myImg" src="img/iatsu/dodgeball.jpg">
-        <img class="myImages" id="myImg" src="img/iatsu/formalEvenV2.jpg">
+        <img class="myImages" id="myImg" src="img/iatsu/formalEventV2.jpg">
         <img class="myImages" id="myImg" src="img/iatsu/basketballexhibition.jpg">
         <img class="myImages" id="myImg" src="img/iatsu/bball/1day.jpg">
         <img class="myImages" id="myImg" src="img/iatsu/bball/2days.jpg">
