updated projects page

--- a/process.html
+++ b/process.html
@@ -72,18 +72,11 @@
         </h4>
 
         <div class="project-container">
-          <a href="">
+          <a href="publicationproject.html">
             <img src="img/design/PUB332/XCU-cover.PNG">
 
             <p>PUB332 Publication Project</p>
 
-          </a>
-
-          <a href="">
-
-            <img src="img/design/fixed frame landing page.jpg">
-
-            <p>IAT333 Web Experience Reform</p>
           </a>
         </div>
       </div>
