fixed broken img

--- a/process.html
+++ b/process.html
@@ -73,7 +73,7 @@
 
         <div class="project-container">
           <a href="publicationproject.html">
-            <img src="img/design/PUB332/XCU-cover.PNG">
+            <img src="img/design/PUB332/XCU-cover.png">
 
             <p>PUB332 Publication Project</p>
 
