--- a/publicationproject.html
+++ b/publicationproject.html
@@ -137,9 +137,9 @@
           cover story and a few sub-features.
         </p>
 
-        <img src="img/design/PUB332/cover1-nogrid.png">
-        <img src="img/design/PUB332/cover2-nogrid.png">
-        <img src="img/design/PUB332/cover3-nogrid.png">
+        <img src="img/design/PUB332/cover1-nogrid.PNG">
+        <img src="img/design/PUB332/cover2-nogrid.PNG">
+        <img src="img/design/PUB332/cover3-nogrid.PNG">
         <figcaption>thumbnail designs for covers</figcaption>
 
         <p>
