added project container

--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@
 
           </a>
 
+          <a href="publicationproject.html">
+            <img src="img/design/PUB332/XCU-cover.png">
+
+            <p>PUB332 Publication Project</p>
+
+          </a>
+
 
         </div>
 
