--- a/about.html
+++ b/about.html
@@ -37,6 +37,7 @@
 
       <div class="box">
         <h2>ABOUT ME</h2>
+        <h4>pronouns: they/them</h4>
         <p>
           <em>HOLY COW BATMAN!</em> My name is Danny and I'm an illustrator! I like to combine graphic design
           with illustrations to create a narrative within a graphic. I like to explore
