added project synopsis and used programs

--- a/iatsu20192020.html
+++ b/iatsu20192020.html
@@ -34,6 +34,15 @@
 
         <h2>PROFILE AND COVER IMAGES</h2>
 
+        <p>
+          All social media graphics made during my time at IATSU.
+        </p>
+
+        <h3>tools used</h3>
+        <ul>
+          <li>CLIP STUDIO PAINT PRO</li>
+          <li>Adobe Illustrator</li>
+        </ul>
 
 
       <div class="gallery">
