--- a/iatsuspringformal2020.html
+++ b/iatsuspringformal2020.html
@@ -29,7 +29,20 @@
       </div>
 
       <div class="box">
-        <h2>IATSU 2020 SPRING FORMAL</h2>
+        <h2>IATSU 2020 SPRING FORMAL EVENT BANNER</h2>
+
+        <h3>project synopsis</h3>
+
+        <p>
+          Working with our two Director of Events and the IATSU President, I designed
+          the art direction and the event banner for our Spring Formal event.
+        </p>
+
+        <p>
+          <em>timeframe:</em> three months
+        </p>
+
+        <img src="img/iatsu/formalEventV2.jpg">
 
         <p>
           This banner was originally designed for our annual Spring Formal event. This
@@ -38,8 +51,15 @@
           for the theme and the event banner prior to cancellation.
         </p>
 
-        <img src="img/iatsu/formalEventV2.jpg">
+      </div>
 
+      <div class="box">
+        <h3>tools used</h3>
+
+        <ul>
+          <li>CLIP STUDIO PAINT PRO</li>
+          <li>Adobe Illustrator</li>
+        </ul>
       </div>
 
       <div class="box">
