--- a/iatsusummersocial.html
+++ b/iatsusummersocial.html
@@ -29,7 +29,15 @@
       </div>
 
       <div class="box">
-        <h2>IATSU 2019 SUMMER SOCIAL BANNER</h2>
+        <h2>IATSU 2019 SUMMER SOCIAL EVENT BANNER AND PROMOTIONAL MATERIAL</h2>
+
+        <h3>project synopsis</h3>
+        <p>
+          Working with our two Director of Events, I designed the official event banner
+          for our annual Summer Social event along with various promotional material.
+        </p>
+
+        <p><em>timeframe:</em> roughly three weeks</p>
 
         <img src="img/iatsu/eventbanner.jpg">
 
@@ -42,6 +50,15 @@
           appeal of a playful environment.
 
         </p>
+
+      </div>
+
+      <div class="box">
+        <h3>tools used</h3>
+        <ul>
+          <li>CLIP STUDIO PAINT PRO</li>
+          <li>Adobe Illustrator</li>
+        </ul>
 
       </div>
 
