--- a/publicationproject.html
+++ b/publicationproject.html
@@ -29,7 +29,18 @@
       </div>
 
       <div class="box">
-        <h2>PUB332 PUBLICATION PROJECT</h2>
+        <h2>MAGAZINE PUBLICATION DESIGN (ACADEMIC)</h2>
+
+        <h3>project synopsis</h3>
+
+        <p>
+          This was an individual design where I created a publication concept with art
+          direction, cover designs, feature editorial designs, and advertisement design.
+        </p>
+
+        <p>
+          <em>timeframe:</em> three months
+        </p>
 
         <img src="img/design/PUB332/XCU-cover.png">
 
@@ -42,6 +53,17 @@
 
         </p>
 
+      </div>
+
+      <div class="box">
+        <h3>tools used</h3>
+
+        <ul>
+          <li>Figma</li>
+          <li>Adobe Photoshop</li>
+          <li>Adobe Indesign</li>
+          <li>Pinterest</li>
+        </ul>
       </div>
 
       <div class="box">
