--- a/studentguide.html
+++ b/studentguide.html
@@ -31,6 +31,18 @@
       <div class="box">
         <h2>IATSU FIRST YEAR STUDENT GUIDE</h2>
 
+        <h3>project synopsis</h3>
+
+        <p>
+          This was a project initially created for a collaboration between IATSU and
+          the SIAT advising team. This was an individual design project while the rest
+          of the IATSU team would provide feedback.
+        </p>
+
+        <p>
+          <em>timeframe:</em> three months
+        </p>
+
         <img src="img/iatsu/process/help kun.png">
         <figcaption>mascot created for this guide</figcaption>
 
@@ -41,6 +53,16 @@
           to first year students during Welcome Day, a day for new students to tour around
           the campus and get to know other students.
         </p>
+      </div>
+
+      <div class="box">
+        <h3>tools used</h3>
+
+        <ul>
+          <li>CLIP STUDIO PAINT PRO</li>
+          <li>Adobe Indesign</li>
+          <li>Adobe Illustrator</li>
+        </ul>
       </div>
 
       <div class="box">
@@ -119,7 +141,12 @@
         <h3>final product</h3>
 
         <p>
-          Because of funding problems, the IATSU team was unable to print an adequate
+          Due to time constraints, the IATSU team had voted to pull out of the collaboration
+          and instead distribute the student guide on our own.
+        </p>
+
+        <p>
+          Because of funding issues, the IATSU team was unable to print an adequate
           amount of booklets to hand out to all first years. However, we able to
           give some to various students during a Clubs Day exhibition. The students
           who received these guides found the guides very helpful and friendly.
