fixed small details

--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
         <div class="project-container">
           <a href="iatsusummersocial.html">
             <img src="img/iatsu/eventbanner.jpg">
-            <p>IATSU 2019 Summer Social</p>
+            <p>IATSU 2019 Summer Social Event Banner and Promotional Material</p>
 
 
           </a>
 
           <a href="studentguide.html">
             <img src="img/iatsu/process/am lost send help.png">
-            <p>IATSU Student Guide</p>
+            <p>IATSU Student Guide Booklet</p>
 
 
           </a>
@@ -58,7 +58,7 @@
           <a href="publicationproject.html">
             <img src="img/design/PUB332/XCU-cover.png">
 
-            <p>PUB332 Publication Project</p>
+            <p>Magazine Publication Design (ACADEMIC)</p>
 
           </a>
 
