--- a/process.html
+++ b/process.html
@@ -29,6 +29,28 @@
       </div>
 
       <div class="box">
+        <h2>SCHOOL PROJECTS</h2>
+        <h4>
+          projects created for course projects
+        </h4>
+
+        <div class="project-container">
+          <a href="publicationproject.html">
+            <img src="img/design/PUB332/XCU-cover.png">
+
+            <p>Magazine Publication Design</p>
+
+          </a>
+
+          <a href="vfwwebexperience.html">
+            <img src="img/design/IAT333/fixed frame landing page.jpg">
+
+            <p>VFW Web Experience Reform</p>
+          </a>
+        </div>
+      </div>
+
+      <div class="box">
         <h2>INTERACTIVE ARTS AND TECHNOLOGY STUDENT UNION 2018-2019</h2>
         <h4>
           projects created during my term as the Director of Communication Design
@@ -36,21 +58,21 @@
         <div class="project-container">
           <a href="iatsusummersocial.html">
             <img src="img/iatsu/eventbanner.jpg">
-            <p>IATSU 2019 Summer Social</p>
+            <p>IATSU 2019 Summer Social Event Banner and Promotional Material</p>
 
 
           </a>
 
           <a href="studentguide.html">
             <img src="img/iatsu/process/am lost send help.png">
-            <p>IATSU Student Guide</p>
+            <p>IATSU Student Guide Booklet</p>
 
 
           </a>
 
           <a href="iatsuspringformal2020.html">
             <img src="img/iatsu/formalEventV2.jpg">
-            <p>IATSU Spring 2020 Formal</p>
+            <p>IATSU Spring 2020 Formal Event Banner</p>
 
           </a>
 
@@ -65,21 +87,6 @@
         </div>
       </div>
 
-      <div class="box">
-        <h2>SCHOOL PROJECTS</h2>
-        <h4>
-          projects created for course projects
-        </h4>
-
-        <div class="project-container">
-          <a href="publicationproject.html">
-            <img src="img/design/PUB332/XCU-cover.png">
-
-            <p>PUB332 Publication Project</p>
-
-          </a>
-        </div>
-      </div>
 
     </div>
   </body>
