--- a/about.html
+++ b/about.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/fonts.css">
 
+    <link rel="icon"
+          type="image/png"
+          href="img/illustration/swedfish.png">
+
 
   </head>
 
