--- a/gallery.html
+++ b/gallery.html
@@ -12,6 +12,10 @@
   <link rel="stylesheet" href="css/fonts.css">
   <link rel="stylesheet" href="css/modal.css">
 
+  <link rel="icon"
+        type="image/png"
+        href="img/illustration/swedfish.png">
+
 
 </head>
 
