--- a/styling.html
+++ b/styling.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/fonts.css">
 
+    <link rel="icon"
+          type="image/png"
+          href="img/illustration/swedfish.png">
+
 
   </head>
 
@@ -68,6 +72,9 @@
             <p>Bitter</p>
 
           </section>
+
+          <h3>favicon</h3>
+          <img src="img/illustration/swedfish.png">
 
         </section>
       </div>
