--- a/iatsusummersocial.html
+++ b/iatsusummersocial.html
@@ -86,6 +86,7 @@
       <div class="box">
         <h3>process</h3>
 
+        <img src="img/iatsu/process/soMMMARRRR.png">
         <img src="img/iatsu/soMMMARRRR.png">
         <figcaption>initial sketch</figcaption>
 
