--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
 
         <a href="styling.html">style guide</a>
         <a href="references.html">references</a>
-        <a href="dla153@sfu.ca">email</a>
+        <a href="mail:dla153@sfu.ca">email</a>
         <a href="https://www.instagram.com/boxonarock/">instagram</a>
 
 
