fixed broken link

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <h2>YOU CAN FIND ME HERE</h2>
 
         <a href="https://www.instagram.com/boxonarock/">instagram</a>
-        <a href="dla153@sfu.ca">email</a>
+        <a href="mail:dla153@sfu.ca">email</a>
 
       </div>
 
