--- a/contrasts.html
+++ b/contrasts.html
@@ -155,13 +155,9 @@
 
         <p>
           After our Producer had compiled all of our information for our kit, I
-          had designed our final package to be released to the public. The
-          file below is our most recent copy of our press kit.
+          had designed our final package to be released to the public.
 
         </p>
-
-        <iframe src="files/Contrasts Press Kit - Team VoiCED.pdf#toolbar=0" width="100%" height="700rem">
-          </iframe>
       </div>
 
       <div class="box">
