modified:   contrasts.html

--- a/contrasts.html
+++ b/contrasts.html
@@ -155,9 +155,11 @@
 
         <p>
           After our Producer had compiled all of our information for our kit, I
-          had designed our final package to be released to the public.
+          had designed our final package to be released to the public. The following is the most recent version of our press kit.
 
         </p>
+
+        <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FqA0BON8Hs8SjoWSqPKCSL7%2FContrasts-Pitch-Package%3Fnode-id%3D0%253A1%26t%3DBpluapYtybHk2A96-1" allowfullscreen></iframe>
       </div>
 
       <div class="box">
