--- a/contrasts.html
+++ b/contrasts.html
@@ -29,7 +29,7 @@
     <div class="container">
 
       <div class="nav">
-        <a href="">HOME</a>
+        <a href="index.html">HOME</a>
         <a href="process.html" class="active">PROJECTS</a>
         <a href="gallery.html">GALLERY</a>
         <a href="about.html">ABOUT</a>
