--- a/studentmentalhealthvis.html
+++ b/studentmentalhealthvis.html
@@ -44,7 +44,7 @@
             </p>
 
             <ul>
-                <li><em>TOOLS USED:</em></li>
+                <li><em>TOOLS USED</em></li>
                 <li>Observable</li>
                 <li>Javascript</li>
                 <li>Markdown</li>
@@ -55,7 +55,7 @@
         </div>
 
         <div class="box">
-            <iframe width="100%" height="500" frameborder="0"
+            <iframe width="100%" height="800" frameborder="0"
   src="https://observablehq.com/embed/4ed7a9d6593a890c@latest?cell=*"></iframe>
 
         </div>
