--- a/vfwcollab.html
+++ b/vfwcollab.html
@@ -42,7 +42,7 @@
 
 
             <ul>
-                <li><em>TOOLS USED:</em></li>
+                <li><em>TOOLS USED</em></li>
                 <li>Figma</li>
                 <li>Google Forms</li>
                 <li>Google Docs</li>
