--- a/vorum.html
+++ b/vorum.html
@@ -46,8 +46,9 @@
             </p>
 
             <ul>
-                <li><em>TOOLS USED:</em></li>
+                <li><em>TOOLS USED</em></li>
                 <li>Adobe Creative Suite</li>
+                <li>Sharepoint</li>
                 <li>Figma</li>
                 <li>Canon EOS 1000D</li>
             </ul>
