edited title for vorum

--- a/projects.html
+++ b/projects.html
@@ -57,7 +57,7 @@
         <div class="link-box">
           <a href="vorum.html">
             <img src="img/thumbnails/VORUM-thumbnail.png">
-            <p>Vorum (Co-op)</p>
+            <p>Vorum Re-brand (Co-op)</p>
           </a>
         </div>
 
