--- a/vorum.html
+++ b/vorum.html
@@ -34,7 +34,7 @@
 
         <div class="box">
 
-            <h3>Vorum (Co-op)</h3>
+            <h3>Vorum Re-brand (Co-op)</h3>
 
             <p>
                 <em>role:</em> Graphic Designer <br>
