--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <div class="box">
 
-            <h1>danny lee</h1>
+            <h1>danny</h1>
             <h2>
                 UX/UI design and photography
             </h2>
