--- a/photography.html
+++ b/photography.html
@@ -12,10 +12,36 @@
     <link rel="stylesheet" href="css/font.css">
     <link rel="stylesheet" href="css/modal.css">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 
     <link rel="icon"
           type="image/png"
           href="">
+
+
+    <script> 
+      /* Toggle between adding and removing the "responsive" class to topnav when the user clicks on the icon */
+        function navMenu() {
+            var x = document.getElementById("myNav");
+  
+            if (x.className === "nav") {
+              x.className += " responsive";
+            } else {
+              x.className = "nav";
+            }
+          }
+      </script>
+  
+      <script>
+        function changeIcon(x) {
+          if (x.className == "fa fa-bars") {
+            x.className = "fa fa-times";
+          } else {
+            x.className = "fa fa-bars";
+          }
+        }
+      </script>
 
 
   </head>
@@ -24,11 +50,13 @@
 
   <body>
 
-    <nav>
+    <nav class="nav" id="myNav">
       <a href="index.html">home</a>
       <a href="projects.html">projects</a>
       <a href="" class="active">photography</a>
       <a href="aboutme.html">about</a>
+      <a href="javascript:void(0);" class="icon" onclick="navMenu()">
+        <i onclick="changeIcon(this)" class="fa fa-bars" id="icon"></i></a>
     </nav>
 
     <!-- <div class="container"> -->
