--- a/studentmentalhealthvis.html
+++ b/studentmentalhealthvis.html
@@ -11,10 +11,35 @@
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/font.css">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 
     <link rel="icon"
           type="image/png"
           href="">
+
+    <script> 
+      /* Toggle between adding and removing the "responsive" class to topnav when the user clicks on the icon */
+        function navMenu() {
+            var x = document.getElementById("myNav");
+  
+            if (x.className === "nav") {
+              x.className += " responsive";
+            } else {
+              x.className = "nav";
+            }
+          }
+      </script>
+  
+      <script>
+        function changeIcon(x) {
+          if (x.className == "fa fa-bars") {
+            x.className = "fa fa-times";
+          } else {
+            x.className = "fa fa-bars";
+          }
+        }
+      </script>
 
 
   </head>
@@ -23,11 +48,13 @@
 
   <body>
 
-    <nav>
+    <nav class="nav" id="myNav">
       <a href="index.html">home</a>
       <a href="projects.html" class="active">projects</a>
       <a href="photography.html">photography</a>
       <a href="aboutme.html">about</a>
+      <a href="javascript:void(0);" class="icon" onclick="navMenu()">
+        <i onclick="changeIcon(this)" class="fa fa-bars" id="icon"></i></a>
     </nav>
     
     <div class="container">
@@ -55,7 +82,7 @@
         </div>
 
         <div class="box">
-            <iframe width="100%" height="800" frameborder="0"
+            <iframe frameborder="0"
   src="https://observablehq.com/embed/4ed7a9d6593a890c@latest?cell=*"></iframe>
 
         </div>
