--- a/vfwcollab.html
+++ b/vfwcollab.html
@@ -11,23 +11,48 @@
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/font.css">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 
     <link rel="icon"
           type="image/png"
           href="">
 
-
+    <script> 
+      /* Toggle between adding and removing the "responsive" class to topnav when the user clicks on the icon */
+        function navMenu() {
+            var x = document.getElementById("myNav");
+  
+            if (x.className === "nav") {
+              x.className += " responsive";
+            } else {
+              x.className = "nav";
+            }
+          }
+      </script>
+  
+      <script>
+        function changeIcon(x) {
+          if (x.className == "fa fa-bars") {
+            x.className = "fa fa-times";
+          } else {
+            x.className = "fa fa-bars";
+          }
+        }
+      </script>
   </head>
 
 
 
   <body>
 
-    <nav>
+    <nav class="nav" id="myNav">
       <a href="index.html">home</a>
       <a href="projects.html" class="active">projects</a>
       <a href="photography.html">photography</a>
       <a href="aboutme.html">about</a>
+      <a href="javascript:void(0);" class="icon" onclick="navMenu()">
+        <i onclick="changeIcon(this)" class="fa fa-bars" id="icon"></i></a>
     </nav>
     
     <div class="container">
@@ -54,11 +79,11 @@
 
         <div class="box">
 
-            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2Fxd1vp3tFjk2a3XajDzUg66%2FVancouver-Fashion-Week-Collab%3Ftype%3Ddesign%26node-id%3D0%253A1%26t%3DkvhbPevqw4R1RePl-1" allowfullscreen></iframe>
+            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2Fxd1vp3tFjk2a3XajDzUg66%2FVancouver-Fashion-Week-Collab%3Ftype%3Ddesign%26node-id%3D0%253A1%26t%3DkvhbPevqw4R1RePl-1" allowfullscreen></iframe>
 
-            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2Fxd1vp3tFjk2a3XajDzUg66%2FVancouver-Fashion-Week-Collab%3Ftype%3Ddesign%26node-id%3D3%253A24%26t%3DkvhbPevqw4R1RePl-1" allowfullscreen></iframe>
+            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2Fxd1vp3tFjk2a3XajDzUg66%2FVancouver-Fashion-Week-Collab%3Ftype%3Ddesign%26node-id%3D3%253A24%26t%3DkvhbPevqw4R1RePl-1" allowfullscreen></iframe>
 
-            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2Fxd1vp3tFjk2a3XajDzUg66%2FVancouver-Fashion-Week-Collab%3Ftype%3Ddesign%26node-id%3D3%253A35%26t%3DkvhbPevqw4R1RePl-1" allowfullscreen></iframe>
+            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2Fxd1vp3tFjk2a3XajDzUg66%2FVancouver-Fashion-Week-Collab%3Ftype%3Ddesign%26node-id%3D3%253A35%26t%3DkvhbPevqw4R1RePl-1" allowfullscreen></iframe>
 
 
         </div>
