--- a/vorum.html
+++ b/vorum.html
@@ -11,10 +11,35 @@
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/font.css">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 
     <link rel="icon"
           type="image/png"
           href="">
+
+    <script> 
+      /* Toggle between adding and removing the "responsive" class to topnav when the user clicks on the icon */
+        function navMenu() {
+            var x = document.getElementById("myNav");
+  
+            if (x.className === "nav") {
+              x.className += " responsive";
+            } else {
+              x.className = "nav";
+            }
+          }
+      </script>
+  
+      <script>
+        function changeIcon(x) {
+          if (x.className == "fa fa-bars") {
+            x.className = "fa fa-times";
+          } else {
+            x.className = "fa fa-bars";
+          }
+        }
+      </script>
 
 
   </head>
@@ -23,11 +48,13 @@
 
   <body>
 
-    <nav>
+    <nav class="nav" id="myNav">
       <a href="index.html">home</a>
       <a href="projects.html" class="active">projects</a>
       <a href="photography.html">photography</a>
       <a href="aboutme.html">about</a>
+      <a href="javascript:void(0);" class="icon" onclick="navMenu()">
+        <i onclick="changeIcon(this)" class="fa fa-bars" id="icon"></i></a>
     </nav>
     
     <div class="container">
@@ -56,23 +83,23 @@
         </div>
 
         <div class="box">
-            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FGOgHpip5aHfrQWFihbUFcO%2FVorum-O%2526P-Materials%3Fnode-id%3D1%253A2%26t%3DwwGt0UCqDEyQeEc2-1" allowfullscreen></iframe>
+            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FGOgHpip5aHfrQWFihbUFcO%2FVorum-O%2526P-Materials%3Fnode-id%3D1%253A2%26t%3DwwGt0UCqDEyQeEc2-1" allowfullscreen></iframe>
 
-            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FGOgHpip5aHfrQWFihbUFcO%2FVorum-O%2526P-Materials%3Fnode-id%3D1%253A10176%26t%3DwwGt0UCqDEyQeEc2-1" allowfullscreen></iframe>
+            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FGOgHpip5aHfrQWFihbUFcO%2FVorum-O%2526P-Materials%3Fnode-id%3D1%253A10176%26t%3DwwGt0UCqDEyQeEc2-1" allowfullscreen></iframe>
 
-            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FGOgHpip5aHfrQWFihbUFcO%2FVorum-O%2526P-Materials%3Fnode-id%3D1%253A2829%26t%3DwwGt0UCqDEyQeEc2-1" allowfullscreen></iframe>
+            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FGOgHpip5aHfrQWFihbUFcO%2FVorum-O%2526P-Materials%3Fnode-id%3D1%253A2829%26t%3DwwGt0UCqDEyQeEc2-1" allowfullscreen></iframe>
 
-            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FGOgHpip5aHfrQWFihbUFcO%2FVorum-O%2526P-Materials%3Fnode-id%3D1%253A2321%26t%3DwwGt0UCqDEyQeEc2-1" allowfullscreen></iframe>
+            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FGOgHpip5aHfrQWFihbUFcO%2FVorum-O%2526P-Materials%3Fnode-id%3D1%253A2321%26t%3DwwGt0UCqDEyQeEc2-1" allowfullscreen></iframe>
 
-            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FGOgHpip5aHfrQWFihbUFcO%2FVorum-O%2526P-Materials%3Fnode-id%3D1%253A2054%26t%3DwwGt0UCqDEyQeEc2-1" allowfullscreen></iframe>
+            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FGOgHpip5aHfrQWFihbUFcO%2FVorum-O%2526P-Materials%3Fnode-id%3D1%253A2054%26t%3DwwGt0UCqDEyQeEc2-1" allowfullscreen></iframe>
 
-            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FGOgHpip5aHfrQWFihbUFcO%2FVorum-O%2526P-Materials%3Fnode-id%3D1%253A2551%26t%3DwwGt0UCqDEyQeEc2-1" allowfullscreen></iframe>
+            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FGOgHpip5aHfrQWFihbUFcO%2FVorum-O%2526P-Materials%3Fnode-id%3D1%253A2551%26t%3DwwGt0UCqDEyQeEc2-1" allowfullscreen></iframe>
 
-            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FGOgHpip5aHfrQWFihbUFcO%2FVorum-O%2526P-Materials%3Fnode-id%3D1%253A2330%26t%3DwwGt0UCqDEyQeEc2-1" allowfullscreen></iframe>
+            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FGOgHpip5aHfrQWFihbUFcO%2FVorum-O%2526P-Materials%3Fnode-id%3D1%253A2330%26t%3DwwGt0UCqDEyQeEc2-1" allowfullscreen></iframe>
 
-            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FGOgHpip5aHfrQWFihbUFcO%2FVorum-O%2526P-Materials%3Fnode-id%3D1%253A2726%26t%3DwwGt0UCqDEyQeEc2-1" allowfullscreen></iframe>
+            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FGOgHpip5aHfrQWFihbUFcO%2FVorum-O%2526P-Materials%3Fnode-id%3D1%253A2726%26t%3DwwGt0UCqDEyQeEc2-1" allowfullscreen></iframe>
 
-            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FGOgHpip5aHfrQWFihbUFcO%2FVorum-O%2526P-Materials%3Fnode-id%3D1%253A2558%26t%3DwwGt0UCqDEyQeEc2-1" allowfullscreen></iframe>
+            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FGOgHpip5aHfrQWFihbUFcO%2FVorum-O%2526P-Materials%3Fnode-id%3D1%253A2558%26t%3DwwGt0UCqDEyQeEc2-1" allowfullscreen></iframe>
         </div>
 
         
