--- a/aboutme.html
+++ b/aboutme.html
@@ -79,6 +79,7 @@
                 <li>Figma</li>
                 <li>Canon EOS 1000D</li>
                 <li>Olympus OM-G 35mm film</li>
+                <li>Fujifilm X-T1</li>
             </ul>
 
             <div class="contact">
