added new project; small edits

--- a/IATSU.html
+++ b/IATSU.html
@@ -65,6 +65,7 @@
             <p>
                 <em>role:</em> Director of Communication Design
             </p>
+            <p><em>timeframe:</em> May 2019 - May 2020</p>
 
             <p>
                 As Director of Communication Design, I was to design all social media graphics for our student union. This includes our term's branding, event promotion, and student help material.
