--- a/projects.html
+++ b/projects.html
@@ -97,6 +97,13 @@
           </a>
         </div>
 
+        <div class="link-box">
+          <a href="coquitlamheritagewebredesign.html">
+            <img src="img/thumbnails/CHS-thumbnail.png">
+            <p>Coquitlam Heritage Society Website Redesign</p>
+          </a>
+        </div>
+
         
     </div>
   </body>
