--- a/studentmentalhealthvis.html
+++ b/studentmentalhealthvis.html
@@ -66,9 +66,10 @@
 
             <p>
                 This project was overlooked by Professor Lyn Bartram during IAT355: Introduction to Visual Analytics. The main goal of this project was to create a tool that can be used by those looking into mental health resources for post-secondary students; while we are encouraged to include analytical questions for observational purposes, ultimately we were to focus more on the visual design of our data. I worked by myself for this project.
-                <br>
-                This notebook was originally coded in Observable and uses Javascript and Markdown syntax to generate interactive visualizations.
+                
             </p>
+
+            <p>This notebook was originally coded in Observable and uses Javascript and Markdown syntax to generate interactive visualizations.</p>
 
             <ul>
                 <li><em>TOOLS USED</em></li>
