added font, updated layout

--- a/projects.html
+++ b/projects.html
@@ -61,46 +61,57 @@
     
     <div class="gallery">
 
-        <div class="link-box">
-          
+        <div class="link-box">  
           <a href="IATSU.html">
             <img src="img/thumbnails/IATSU-thumbnail.png">
-            <p>Interactive Arts and Technology Student Union (IATSU)</p>
+            <div class="overlay">
+              <div class="linkText">Interactive Arts and Technology Student Union (IATSU)</div>
+            </div>
           </a>
         </div>
 
         <div class="link-box">
           <a href="editorialproject.html">
             <img src="img/thumbnails/PUB332-thumbnail.png">
-            <p>Publication Layout Project (academic)</p>
+            <div class="overlay">
+              <div class="linkText">Publication Layout Project (academic)</div>
+            </div>
           </a>
         </div>
 
         <div class="link-box">
           <a href="vfwcollab.html">
             <img src="img/thumbnails/VFW-thumbnail.png">
-            <p>Vancouver Fashion Week Web Experience Reform (academic)</p>
+            <div class="overlay">
+              <div class="linkText">Vancouver Fashion Week Web Experience Reform (academic)</div>
+            </div>  
           </a>
         </div>
 
         <div class="link-box">
           <a href="vorum.html">
             <img src="img/thumbnails/VORUM-thumbnail.png">
-            <p>Vorum Re-brand (Co-op)</p>
+            <div class="overlay">
+              <div class="linkText">Vorum Re-brand (Co-op)</div>
+            </div>
           </a>
         </div>
 
         <div class="link-box">
           <a href="studentmentalhealthvis.html">
             <img src="img/thumbnails/IAT355-thumbnail.png">
-            <p>Visual Analytics: Student Mental Health Resources (academic)</p>
+            <div class="overlay">
+              <div class="linkText">Visual Analytics: Student Mental Health Resources (academic)</div>
+            </div>
           </a>
         </div>
 
         <div class="link-box">
           <a href="coquitlamheritagewebredesign.html">
             <img src="img/thumbnails/CHS-thumbnail.png">
-            <p>Coquitlam Heritage Society Website Redesign</p>
+            <div class="overlay">
+              <div class="linkText">Coquitlam Heritage Society Website Redesign</div>
+            </div>
           </a>
         </div>
 
